Footer spacing fixed

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -627,9 +627,15 @@
 
     .logo-footer {
         width: 200px;
-        margin-left: 25px;
-        margin-top: 5px;
+        padding-top: 10px ;
+        
+        
 
+    }
+
+    .footer-logo-top{
+        display: flex;
+        justify-content:center;
     }
 
 
@@ -696,6 +702,7 @@
     .user-icon {
         width: 45px;
         gap: 20px;
+        padding-top: 10px;
 
     }
 
@@ -715,7 +722,7 @@
 
     .team-info {
         gap: 10px;
-        margin-left: 10px;
+        margin-left: 30px;
         flex-wrap: wrap;
         
 
